small fixes for content and visibility

--- a/static/css/main.css
+++ b/static/css/main.css
@@ -122,6 +122,7 @@
 }
 #materialText{
   color: white;
+  z-index: 10;
 }
 
   /*popus*/
