--- a/static/css/tablet.css
+++ b/static/css/tablet.css
@@ -13,7 +13,7 @@
   position: absolute;
   margin-top: 20%;
   overflow-y: auto;
-  max-height: 62%;
+  max-height: 520px;
 }
 
 
